# ROS2-Ultimate-guide-for-Custom-Robotic-Arms-and-Panda-7-DOF

./: README.md  Robotics_kinematics_solver.ipynb
bazu/: CMakeLists.txt  package.xml
bazu/config/: effort_controller.yaml  joint_trajectory_controller.yaml  position_controller.yaml
bazu/launch/: effort_controller_bazu.launch  gazebo_bazu.launch  joint_trajectory_controller_bazu.launch  position_controller_bazu.launch  rviz_bazu.launch
bazu/src/: bazu_trajectory_node.py  robotics_toolbox.ipynb
bazu/urdf/: bazu.urdf
custom_robotic_arm/: CMakeLists.txt  motor_driver.py  package.xml
custom_robotic_arm/config/: controller.yaml
custom_robotic_arm/launch/: arm_gazebo.launch
custom_robotic_arm/urdf/: robotic_arm.urdf  simple_arm.urdf
franka_description/: CMakeLists.txt  package.xml
franka_description/launch/: visualize_franka.launch.py
franka_description/robots/: hand.xacro  (+4 more)
franka_gazebo/: CMakeLists.txt  how to run and previous commands.txt  package.xml
moveit_arm/: CMakeLists.txt  package.xml
robotic_arms_control/: package.xml  setup.cfg  setup.py
robotic_arms_control/config/: bazu_jtc_controller.yaml  bazu_pos_controller.yaml  panda_jtc_controller.yaml
robotic_arms_control/launch/: controller_spawner.launch.py  gazebo_bringup.launch.py  rviz_bringup.launch.py
robotic_arms_control/robotic_arms_control/: joint_controller_test.py  jtc_multi_goals.py  kinematic_solver.py  rtb_ikine_fkine.py  transform_publisher.py
robotic_arms_control/urdf/: bazu.urdf  panda_arm.urdf
with_gripper_kuka_bot_use_anywhere_else/: CMakeLists.txt  package.xml
(+56 files in other folders)
